{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 97,
  "lineage": "a27783a1-38b5-f3ec-6bdb-9aabbf840f79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092c77f7a4ed230e5",
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:elastic-ip/eipalloc-092c77f7a4ed230e5",
            "domain": "vpc",
            "id": "eipalloc-092c77f7a4ed230e5",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-136-232-23.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.232.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:internet-gateway/igw-01bb87becd444f86d",
            "id": "igw-01bb87becd444f86d",
            "owner_id": "314146293519",
            "tags": {
              "Name": "three-tier-igw"
            },
            "tags_all": {
              "Name": "three-tier-igw"
            },
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:loadbalancer/app/three-tier-alb-app/9e2c60741e7a416f",
            "arn_suffix": "app/three-tier-alb-app/9e2c60741e7a416f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-alb-app-1114787088.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:loadbalancer/app/three-tier-alb-app/9e2c60741e7a416f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-alb-app",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ded692ce8f32b97"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a796284e16e1b4e1"
              },
              {
                "subnet_id": "subnet-0aeb2a9d494569698"
              }
            ],
            "subnets": [
              "subnet-0a796284e16e1b4e1",
              "subnet-0aeb2a9d494569698"
            ],
            "vpc_id": "vpc-0f4befcaeb7f32227",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb-security-group-app",
            "aws_security_group.alb-security-group-web",
            "aws_security_group.asg-security-group-web",
            "aws_subnet.app-subnet1",
            "aws_subnet.app-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:loadbalancer/app/three-tier-alb-web/cabbbbb2b67186f8",
            "arn_suffix": "app/three-tier-alb-web/cabbbbb2b67186f8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-alb-web-1033209595.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:loadbalancer/app/three-tier-alb-web/cabbbbb2b67186f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-alb-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a5ec1af397a6f827"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0999739254634a8b0"
              },
              {
                "subnet_id": "subnet-0cce7e239bdfea772"
              }
            ],
            "subnets": [
              "subnet-0999739254634a8b0",
              "subnet-0cce7e239bdfea772"
            ],
            "vpc_id": "vpc-0f4befcaeb7f32227",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb-security-group-web",
            "aws_subnet.web-subnet1",
            "aws_subnet.web-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:listener/app/three-tier-alb-app/9e2c60741e7a416f/605a34a8db76de30",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:targetgroup/three-tier-tg-app/edec4aa1917e2535",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:listener/app/three-tier-alb-app/9e2c60741e7a416f/605a34a8db76de30",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:loadbalancer/app/three-tier-alb-app/9e2c60741e7a416f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-app",
            "aws_lb_target_group.target-group-app",
            "aws_security_group.alb-security-group-app",
            "aws_security_group.alb-security-group-web",
            "aws_security_group.asg-security-group-web",
            "aws_subnet.app-subnet1",
            "aws_subnet.app-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:listener/app/three-tier-alb-web/cabbbbb2b67186f8/627e9026fe5e6421",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:targetgroup/three-tier-tg-web/cbe9176538f3542d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:listener/app/three-tier-alb-web/cabbbbb2b67186f8/627e9026fe5e6421",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:loadbalancer/app/three-tier-alb-web/cabbbbb2b67186f8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-web",
            "aws_lb_target_group.target-group-web",
            "aws_security_group.alb-security-group-web",
            "aws_subnet.web-subnet1",
            "aws_subnet.web-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:targetgroup/three-tier-tg-app/edec4aa1917e2535",
            "arn_suffix": "targetgroup/three-tier-tg-app/edec4aa1917e2535",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:targetgroup/three-tier-tg-app/edec4aa1917e2535",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-tg-app",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:targetgroup/three-tier-tg-web/cbe9176538f3542d",
            "arn_suffix": "targetgroup/three-tier-tg-web/cbe9176538f3542d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:314146293519:targetgroup/three-tier-tg-web/cbe9176538f3542d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-tg-web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092c77f7a4ed230e5",
            "association_id": "eipassoc-01f6c58bf24cb08ee",
            "connectivity_type": "public",
            "id": "nat-059a666596efd4653",
            "network_interface_id": "eni-0560f954ed5468e41",
            "private_ip": "10.0.1.104",
            "public_ip": "18.136.232.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cce7e239bdfea772",
            "tags": {
              "Name": "three-tier-nat-gw"
            },
            "tags_all": {
              "Name": "three-tier-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet-gw",
            "aws_subnet.web-subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:route-table/rtb-0a3c2e30bfe7cfd87",
            "id": "rtb-0a3c2e30bfe7cfd87",
            "owner_id": "314146293519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-059a666596efd4653",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-private-rote-table"
            },
            "tags_all": {
              "Name": "three-tier-private-rote-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.web-subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:route-table/rtb-08e208434a6fb6eb1",
            "id": "rtb-08e208434a6fb6eb1",
            "owner_id": "314146293519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bb87becd444f86d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-public-route-table"
            },
            "tags_all": {
              "Name": "three-tier-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-rt-asscociation-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0425f4d9cc26bc24c",
            "route_table_id": "rtb-0a3c2e30bfe7cfd87",
            "subnet_id": "subnet-0a796284e16e1b4e1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.app-subnet1",
            "aws_subnet.web-subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-rt-asscociation-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ecd3c30b68061a1",
            "route_table_id": "rtb-0a3c2e30bfe7cfd87",
            "subnet_id": "subnet-0aeb2a9d494569698"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.app-subnet2",
            "aws_subnet.web-subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-asscociation-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a80c83b85138d47",
            "route_table_id": "rtb-08e208434a6fb6eb1",
            "subnet_id": "subnet-0cce7e239bdfea772"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public-route-table",
            "aws_subnet.web-subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-asscociation-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00215e063ea4eace7",
            "route_table_id": "rtb-08e208434a6fb6eb1",
            "subnet_id": "subnet-0999739254634a8b0"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public-route-table",
            "aws_subnet.web-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:security-group/sg-00ded692ce8f32b97",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ded692ce8f32b97",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000e2fb44f3dad434"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-alb-sg-app",
            "name_prefix": "",
            "owner_id": "314146293519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-alb-sg-app"
            },
            "tags_all": {
              "Name": "three-tier-alb-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group-web",
            "aws_security_group.asg-security-group-web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:security-group/sg-0a5ec1af397a6f827",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5ec1af397a6f827",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-alb-sg-web",
            "name_prefix": "",
            "owner_id": "314146293519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-alb-sg-web"
            },
            "tags_all": {
              "Name": "three-tier-alb-sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg-security-group-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:security-group/sg-0e9f4e50db9205909",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9f4e50db9205909",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ded692ce8f32b97"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH From Anywhere or Your-IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000e2fb44f3dad434"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "three-tier-asg-sg-app",
            "name_prefix": "",
            "owner_id": "314146293519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-asg-sg-app"
            },
            "tags_all": {
              "Name": "three-tier-asg-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group-app",
            "aws_security_group.alb-security-group-web",
            "aws_security_group.asg-security-group-web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg-security-group-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:security-group/sg-000e2fb44f3dad434",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000e2fb44f3dad434",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH From Anywhere or Your-IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5ec1af397a6f827"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-asg-sg-web",
            "name_prefix": "",
            "owner_id": "314146293519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-asg-sg-web"
            },
            "tags_all": {
              "Name": "three-tier-asg-sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group-web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:security-group/sg-06f09ebe8be1f60fe",
            "description": "DB SEcurity Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f09ebe8be1f60fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9f4e50db9205909"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "three-tier-db-sg",
            "name_prefix": "",
            "owner_id": "314146293519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-db-sg"
            },
            "tags_all": {
              "Name": "three-tier-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group-app",
            "aws_security_group.alb-security-group-web",
            "aws_security_group.asg-security-group-app",
            "aws_security_group.asg-security-group-web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:subnet/subnet-0a796284e16e1b4e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a796284e16e1b4e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314146293519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-app-subnet-1"
            },
            "tags_all": {
              "Name": "three-tier-app-subnet-1"
            },
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:subnet/subnet-0aeb2a9d494569698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeb2a9d494569698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314146293519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-app-subnet-2"
            },
            "tags_all": {
              "Name": "three-tier-app-subnet-2"
            },
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:subnet/subnet-08b20a34e39f497f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b20a34e39f497f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314146293519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-db-subnet-1"
            },
            "tags_all": {
              "Name": "three-tier-db-subnet-1"
            },
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:subnet/subnet-0d822123b641bf1a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d822123b641bf1a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146293519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-db-subnet-2"
            },
            "tags_all": {
              "Name": "three-tier-db-subnet-2"
            },
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:subnet/subnet-0cce7e239bdfea772",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cce7e239bdfea772",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146293519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-web-subnet-1"
            },
            "tags_all": {
              "Name": "three-tier-web-subnet-1"
            },
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:subnet/subnet-0999739254634a8b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0999739254634a8b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146293519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-web-subnet-2"
            },
            "tags_all": {
              "Name": "three-tier-web-subnet-2"
            },
            "vpc_id": "vpc-0f4befcaeb7f32227"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146293519:vpc/vpc-0f4befcaeb7f32227",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cdf21c3d9bbb173c",
            "default_route_table_id": "rtb-059a10a96b4e7cf04",
            "default_security_group_id": "sg-0b63b0fb2bbb6805f",
            "dhcp_options_id": "dopt-07d99ca7e87eb6e79",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4befcaeb7f32227",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059a10a96b4e7cf04",
            "owner_id": "314146293519",
            "tags": {
              "Name": "three-tier-vpc"
            },
            "tags_all": {
              "Name": "three-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}